--- a/BLOC2/notebooks/02_pandas_2.ipynb
+++ b/BLOC2/notebooks/02_pandas_2.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1050,135 +1050,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              joueur_rg nom_joueur  n_victoire_rg   joueur_wb  n_victoire_wb\n",
-      "0          Rafael Nadal      Nadal              7     R.Nadal            0.0\n",
-      "1          David Ferrer     Ferrer              6    D.Ferrer            3.0\n",
-      "2        Novak Djokovic   Djokovic              5  N.Djokovic            6.0\n",
-      "3    Jo-Wilfried Tsonga     Tsonga              5  J-W.Tsonga            1.0\n",
-      "4         Roger Federer    Federer              4   R.Federer            1.0\n",
-      "..                  ...        ...            ...         ...            ...\n",
-      "124     Maxime Teixeira   Teixeira              0         NaN            NaN\n",
-      "125       Bernard Tomic      Tomic              0     B.Tomic            3.0\n",
-      "126         Jiri Vesely     Vesely              0         NaN            NaN\n",
-      "127      Rhyne Williams   Williams              0         NaN            NaN\n",
-      "128         Jurgen Zopp       Zopp              0      J.Zopp            0.0\n",
+      "    nom_joueur  n_victoire_rg  n_victoire_wb\n",
+      "0        Nadal              7            0.0\n",
+      "1       Ferrer              6            3.0\n",
+      "2     Djokovic              5            6.0\n",
+      "3       Tsonga              5            1.0\n",
+      "4      Federer              4            1.0\n",
+      "..         ...            ...            ...\n",
+      "124   Teixeira              0            NaN\n",
+      "125      Tomic              0            3.0\n",
+      "126     Vesely              0            NaN\n",
+      "127   Williams              0            NaN\n",
+      "128       Zopp              0            0.0\n",
       "\n",
-      "[129 rows x 5 columns]\n"
+      "[129 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(rg_victoires.merge(wb_victoires, on=\"nom_joueur\", how=\"left\", suffixes=(\"_rg\", \"_wb\")))"
+    "print(\n",
+    "    rg_victoires[[\"nom_joueur\", \"n_victoire\"]].merge(\n",
+    "        wb_victoires[[\"nom_joueur\", \"n_victoire\"]],\n",
+    "        on=\"nom_joueur\",\n",
+    "        how=\"left\",\n",
+    "        suffixes=(\"_rg\", \"_wb\")\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              joueur_rg nom_joueur  n_victoire_rg    joueur_wb  n_victoire_wb\n",
-      "0                   NaN     Murray            NaN     A.Murray              7\n",
-      "1        Novak Djokovic   Djokovic            5.0   N.Djokovic              6\n",
-      "2                   NaN  Del Potro            NaN  J.Del Potro              5\n",
-      "3         Tomas Berdych    Berdych            0.0    T.Berdych              4\n",
-      "4        Jerzy Janowicz   Janowicz            2.0   J.Janowicz              4\n",
-      "..                  ...        ...            ...          ...            ...\n",
-      "125                 NaN      Ungur            NaN      A.Ungur              0\n",
-      "126                 NaN       Ward            NaN       J.Ward              0\n",
-      "127  Stanislas Wawrinka   Wawrinka            4.0   S.Wawrinka              0\n",
-      "128    Horacio Zeballos   Zeballos            1.0   H.Zeballos              0\n",
-      "129         Jurgen Zopp       Zopp            0.0       J.Zopp              0\n",
+      "    nom_joueur  n_victoire_rg  n_victoire_wb\n",
+      "0       Murray            NaN              7\n",
+      "1     Djokovic            5.0              6\n",
+      "2    Del Potro            NaN              5\n",
+      "3      Berdych            0.0              4\n",
+      "4     Janowicz            2.0              4\n",
+      "..         ...            ...            ...\n",
+      "125      Ungur            NaN              0\n",
+      "126       Ward            NaN              0\n",
+      "127   Wawrinka            4.0              0\n",
+      "128   Zeballos            1.0              0\n",
+      "129       Zopp            0.0              0\n",
       "\n",
-      "[130 rows x 5 columns]\n"
+      "[130 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(rg_victoires.merge(wb_victoires, on=\"nom_joueur\", how=\"right\", suffixes=(\"_rg\", \"_wb\")))"
+    "print(\n",
+    "    rg_victoires[[\"nom_joueur\", \"n_victoire\"]].merge(\n",
+    "        wb_victoires[[\"nom_joueur\", \"n_victoire\"]],\n",
+    "        on=\"nom_joueur\",\n",
+    "        how=\"right\",\n",
+    "        suffixes=(\"_rg\", \"_wb\")\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              joueur_rg  nom_joueur  n_victoire_rg     joueur_wb  \\\n",
-      "0          Rafael Nadal       Nadal              7       R.Nadal   \n",
-      "1          David Ferrer      Ferrer              6      D.Ferrer   \n",
-      "2        Novak Djokovic    Djokovic              5    N.Djokovic   \n",
-      "3    Jo-Wilfried Tsonga      Tsonga              5    J-W.Tsonga   \n",
-      "4         Roger Federer     Federer              4     R.Federer   \n",
-      "..                  ...         ...            ...           ...   \n",
-      "101   Sergiy Stakhovsky  Stakhovsky              0  S.Stakhovsky   \n",
-      "102      Radek Stepanek    Stepanek              0    R.Stepanek   \n",
-      "103  Jan-Lennard Struff      Struff              0      J.Struff   \n",
-      "104       Bernard Tomic       Tomic              0       B.Tomic   \n",
-      "105         Jurgen Zopp        Zopp              0        J.Zopp   \n",
+      "     nom_joueur  n_victoire_rg  n_victoire_wb\n",
+      "0         Nadal              7              0\n",
+      "1        Ferrer              6              3\n",
+      "2      Djokovic              5              6\n",
+      "3        Tsonga              5              1\n",
+      "4       Federer              4              1\n",
+      "..          ...            ...            ...\n",
+      "101  Stakhovsky              0              2\n",
+      "102    Stepanek              0              1\n",
+      "103      Struff              0              2\n",
+      "104       Tomic              0              3\n",
+      "105        Zopp              0              0\n",
       "\n",
-      "     n_victoire_wb  \n",
-      "0                0  \n",
-      "1                3  \n",
-      "2                6  \n",
-      "3                1  \n",
-      "4                1  \n",
-      "..             ...  \n",
-      "101              2  \n",
-      "102              1  \n",
-      "103              2  \n",
-      "104              3  \n",
-      "105              0  \n",
-      "\n",
-      "[106 rows x 5 columns]\n"
+      "[106 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(rg_victoires.merge(wb_victoires, on=\"nom_joueur\", how=\"inner\", suffixes=(\"_rg\", \"_wb\")))"
+    "print(\n",
+    "    rg_victoires[[\"nom_joueur\", \"n_victoire\"]].merge(\n",
+    "        wb_victoires[[\"nom_joueur\", \"n_victoire\"]],\n",
+    "        on=\"nom_joueur\",\n",
+    "        how=\"inner\",\n",
+    "        suffixes=(\"_rg\", \"_wb\")\n",
+    "    )\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              joueur_rg nom_joueur  n_victoire_rg   joueur_wb  n_victoire_wb\n",
-      "0          Rafael Nadal      Nadal            7.0     R.Nadal            0.0\n",
-      "1          David Ferrer     Ferrer            6.0    D.Ferrer            3.0\n",
-      "2        Novak Djokovic   Djokovic            5.0  N.Djokovic            6.0\n",
-      "3    Jo-Wilfried Tsonga     Tsonga            5.0  J-W.Tsonga            1.0\n",
-      "4         Roger Federer    Federer            4.0   R.Federer            1.0\n",
-      "..                  ...        ...            ...         ...            ...\n",
-      "148                 NaN    Odesnik            NaN   W.Odesnik            0.0\n",
-      "149                 NaN       Reid            NaN      M.Reid            0.0\n",
-      "150                 NaN     Rochus            NaN    O.Rochus            0.0\n",
-      "151                 NaN      Ungur            NaN     A.Ungur            0.0\n",
-      "152                 NaN       Ward            NaN      J.Ward            0.0\n",
+      "    nom_joueur  n_victoire_rg  n_victoire_wb\n",
+      "0        Nadal            7.0            0.0\n",
+      "1       Ferrer            6.0            3.0\n",
+      "2     Djokovic            5.0            6.0\n",
+      "3       Tsonga            5.0            1.0\n",
+      "4      Federer            4.0            1.0\n",
+      "..         ...            ...            ...\n",
+      "148    Odesnik            NaN            0.0\n",
+      "149       Reid            NaN            0.0\n",
+      "150     Rochus            NaN            0.0\n",
+      "151      Ungur            NaN            0.0\n",
+      "152       Ward            NaN            0.0\n",
       "\n",
-      "[153 rows x 5 columns]\n"
+      "[153 rows x 3 columns]\n"
      ]
     }
    ],
    "source": [
-    "print(rg_victoires.merge(wb_victoires, on=\"nom_joueur\", how=\"outer\", suffixes=(\"_rg\", \"_wb\")))"
+    "print(\n",
+    "    rg_victoires[[\"nom_joueur\", \"n_victoire\"]].merge(\n",
+    "        wb_victoires[[\"nom_joueur\", \"n_victoire\"]],\n",
+    "        on=\"nom_joueur\",\n",
+    "        how=\"outer\",\n",
+    "        suffixes=(\"_rg\", \"_wb\")\n",
+    "    )\n",
+    ")"
    ]
   }
  ],
