--- a/BLOC2/notebooks/04_json.ipynb
+++ b/BLOC2/notebooks/04_json.ipynb
@@ -461,10 +461,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>count</th>\n",
+       "      <th>pages</th>\n",
+       "      <th>next</th>\n",
+       "      <th>previous</th>\n",
+       "      <th>results</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.411...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.420...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.421...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.423...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.425...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.427...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.429...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.430...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.432...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>60</td>\n",
+       "      <td>6</td>\n",
+       "      <td>/api/planets?page=2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'fields': {'edited': '2014-12-20T20:58:18.434...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   count  pages                 next  previous  \\\n",
+       "0     60      6  /api/planets?page=2       NaN   \n",
+       "1     60      6  /api/planets?page=2       NaN   \n",
+       "2     60      6  /api/planets?page=2       NaN   \n",
+       "3     60      6  /api/planets?page=2       NaN   \n",
+       "4     60      6  /api/planets?page=2       NaN   \n",
+       "5     60      6  /api/planets?page=2       NaN   \n",
+       "6     60      6  /api/planets?page=2       NaN   \n",
+       "7     60      6  /api/planets?page=2       NaN   \n",
+       "8     60      6  /api/planets?page=2       NaN   \n",
+       "9     60      6  /api/planets?page=2       NaN   \n",
+       "\n",
+       "                                             results  \n",
+       "0  {'fields': {'edited': '2014-12-20T20:58:18.411...  \n",
+       "1  {'fields': {'edited': '2014-12-20T20:58:18.420...  \n",
+       "2  {'fields': {'edited': '2014-12-20T20:58:18.421...  \n",
+       "3  {'fields': {'edited': '2014-12-20T20:58:18.423...  \n",
+       "4  {'fields': {'edited': '2014-12-20T20:58:18.425...  \n",
+       "5  {'fields': {'edited': '2014-12-20T20:58:18.427...  \n",
+       "6  {'fields': {'edited': '2014-12-20T20:58:18.429...  \n",
+       "7  {'fields': {'edited': '2014-12-20T20:58:18.430...  \n",
+       "8  {'fields': {'edited': '2014-12-20T20:58:18.432...  \n",
+       "9  {'fields': {'edited': '2014-12-20T20:58:18.434...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "swapi_url = \"https://swapi-node.vercel.app\"\n",
+    "planets_url = swapi_url + \"/api/planets\"\n",
+    "\n",
+    "planets_test= pd.read_json(planets_url)\n",
+    "planets_test"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -475,10 +625,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Données récupérées !\n",
+      "{'count': 60, 'pages': 6, 'next': '/api/planets?page=2', 'previous': None, 'results': [{'fields': {'edited': '2014-12-20T20:58:18.411Z', 'climate': 'arid', 'surface_water': '1', 'name': 'Tatooine', 'diameter': '10465', 'rotation_period': '23', 'created': '2014-12-09T13:50:49.641Z', 'terrain': 'desert', 'gravity': '1 standard', 'orbital_period': '304', 'population': '200000', 'residents': [], 'films': [], 'url': '/api/planets/1'}}, {'fields': {'edited': '2014-12-20T20:58:18.420Z', 'climate': 'temperate', 'surface_water': '40', 'name': 'Alderaan', 'diameter': '12500', 'rotation_period': '24', 'created': '2014-12-10T11:35:48.479Z', 'terrain': 'grasslands, mountains', 'gravity': '1 standard', 'orbital_period': '364', 'population': '2000000000', 'residents': [], 'films': [], 'url': '/api/planets/2'}}, {'fields': {'edited': '2014-12-20T20:58:18.421Z', 'climate': 'temperate, tropical', 'surface_water': '8', 'name': 'Yavin IV', 'diameter': '10200', 'rotation_period': '24', 'created': '2014-12-10T11:37:19.144Z', 'terrain': 'jungle, rainforests', 'gravity': '1 standard', 'orbital_period': '4818', 'population': '1000', 'residents': [], 'films': [], 'url': '/api/planets/3'}}, {'fields': {'edited': '2014-12-20T20:58:18.423Z', 'climate': 'frozen', 'surface_water': '100', 'name': 'Hoth', 'diameter': '7200', 'rotation_period': '23', 'created': '2014-12-10T11:39:13.934Z', 'terrain': 'tundra, ice caves, mountain ranges', 'gravity': '1.1 standard', 'orbital_period': '549', 'population': 'unknown', 'residents': [], 'films': [], 'url': '/api/planets/4'}}, {'fields': {'edited': '2014-12-20T20:58:18.425Z', 'climate': 'murky', 'surface_water': '8', 'name': 'Dagobah', 'diameter': '8900', 'rotation_period': '23', 'created': '2014-12-10T11:42:22.590Z', 'terrain': 'swamp, jungles', 'gravity': 'N/A', 'orbital_period': '341', 'population': 'unknown', 'residents': [], 'films': [], 'url': '/api/planets/5'}}, {'fields': {'edited': '2014-12-20T20:58:18.427Z', 'climate': 'temperate', 'surface_water': '0', 'name': 'Bespin', 'diameter': '118000', 'rotation_period': '12', 'created': '2014-12-10T11:43:55.240Z', 'terrain': 'gas giant', 'gravity': '1.5 (surface), 1 standard (Cloud City)', 'orbital_period': '5110', 'population': '6000000', 'residents': [], 'films': [], 'url': '/api/planets/6'}}, {'fields': {'edited': '2014-12-20T20:58:18.429Z', 'climate': 'temperate', 'surface_water': '8', 'name': 'Endor', 'diameter': '4900', 'rotation_period': '18', 'created': '2014-12-10T11:50:29.349Z', 'terrain': 'forests, mountains, lakes', 'gravity': '0.85 standard', 'orbital_period': '402', 'population': '30000000', 'residents': [], 'films': [], 'url': '/api/planets/7'}}, {'fields': {'edited': '2014-12-20T20:58:18.430Z', 'climate': 'temperate', 'surface_water': '12', 'name': 'Naboo', 'diameter': '12120', 'rotation_period': '26', 'created': '2014-12-10T11:52:31.066Z', 'terrain': 'grassy hills, swamps, forests, mountains', 'gravity': '1 standard', 'orbital_period': '312', 'population': '4500000000', 'residents': [], 'films': [], 'url': '/api/planets/8'}}, {'fields': {'edited': '2014-12-20T20:58:18.432Z', 'climate': 'temperate', 'surface_water': 'unknown', 'name': 'Coruscant', 'diameter': '12240', 'rotation_period': '24', 'created': '2014-12-10T11:54:13.921Z', 'terrain': 'cityscape, mountains', 'gravity': '1 standard', 'orbital_period': '368', 'population': '1000000000000', 'residents': [], 'films': [], 'url': '/api/planets/9'}}, {'fields': {'edited': '2014-12-20T20:58:18.434Z', 'climate': 'temperate', 'surface_water': '100', 'name': 'Kamino', 'diameter': '19720', 'rotation_period': '27', 'created': '2014-12-10T12:45:06.577Z', 'terrain': 'ocean', 'gravity': '1 standard', 'orbital_period': '463', 'population': '1000000000', 'residents': [], 'films': [], 'url': '/api/planets/10'}}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = requests.get(planets_url)\n",
+    "\n",
+    "if r.status_code == 200:\n",
+    "    print(\"Données récupérées !\")\n",
+    "    print(r.json())\n",
+    "else:\n",
+    "    print(f\"Erreur {r.status_code}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -489,10 +656,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total planets = 60\n",
+      "Current planets count = 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Total planets = {r.json()['count']}\")\n",
+    "\n",
+    "print(f\"Current planets count = {len(r.json()['results'])}\")"
+   ]
   },
   {
    "cell_type": "markdown",
