--- a/BLOC2/notebooks/06_mongo.ipynb
+++ b/BLOC2/notebooks/06_mongo.ipynb
@@ -11,7 +11,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeableNote: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Collecting pymongo\n",
+      "  Downloading pymongo-4.12.1-cp311-cp311-win_amd64.whl (847 kB)\n",
+      "                                              0.0/847.1 kB ? eta -:--:--\n",
+      "     ------------------------------------- 847.1/847.1 kB 55.8 MB/s eta 0:00:00\n",
+      "Collecting dnspython<3.0.0,>=1.16.0 (from pymongo)\n",
+      "  Downloading dnspython-2.7.0-py3-none-any.whl (313 kB)\n",
+      "                                              0.0/313.6 kB ? eta -:--:--\n",
+      "     ---------------------------------------- 313.6/313.6 kB ? eta 0:00:00\n",
+      "Installing collected packages: dnspython, pymongo\n",
+      "Successfully installed dnspython-2.7.0 pymongo-4.12.1\n"
+     ]
+    }
+   ],
    "source": [
     "# Décommenter la ligne suivante pour installer pymongo\n",
     "# %pip install pymongo"
@@ -19,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,11 +47,8 @@
     "import pandas as pd\n",
     "import pymongo\n",
     "\n",
-    "client = pymongo.MongoClient(\n",
-    "    # Coller ici la configuration donnée dans Onyxia\n",
-    ")\n",
-    "\n",
-    "db = client.defaultdb"
+    "client = pymongo.MongoClient('mongodb://user-gbourdeau-ensae:oa4imm8b4oufthgicem6@mongodb-0.mongodb-headless:27017,mongodb-1.mongodb-headless:27017/defaultdb')\n",
+    "db=client.defaultdb"
    ]
   },
   {
@@ -61,7 +77,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "planets = db[\"planets\"]\n",
+    "print(planets.count_documents({}))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -72,10 +91,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Tatooine\n",
+      "1    Alderaan\n",
+      "2    Yavin IV\n",
+      "3        Hoth\n",
+      "4     Dagobah\n",
+      "Name: name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "planets = pd.read_json(\"data/planets.json\", lines=True)\n",
+    "\n",
+    "print(planets[\"name\"].head())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -237,7 +273,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "teaching",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
