--- a/BLOC2/notebooks/atelier.ipynb
+++ b/BLOC2/notebooks/atelier.ipynb
@@ -50,29 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Name: Bulbasaur, Weight: 15.2, Price: £63.00\n",
-      "Name: Ivysaur, Weight: 28.7, Price: £87.00\n",
-      "Name: Venusaur, Weight: 220.5, Price: £105.00\n",
-      "Name: Charmander, Weight: 18.7, Price: £48.00\n",
-      "Name: Charmeleon, Weight: 41.9, Price: £165.00\n",
-      "Name: Charizard, Weight: 199.5, Price: £156.00\n",
-      "Name: Squirtle, Weight: 19.8, Price: £130.00\n",
-      "Name: Wartortle, Weight: 49.6, Price: £123.00\n",
-      "Name: Blastoise, Weight: 188.5, Price: £76.00\n",
-      "Name: Caterpie, Weight: 6.4, Price: £73.00\n",
-      "Name: Metapod, Weight: 21.8, Price: £148.00\n",
-      "Name: Butterfree, Weight: 70.5, Price: £162.00\n",
-      "Name: Weedle, Weight: 7.1, Price: £25.00\n",
-      "Name: Kakuna, Weight: 22, Price: £148.00\n",
-      "Name: Beedrill, Weight: 65, Price: £168.00\n",
-      "Name: Pidgey, Weight: 4, Price: £159.00\n"
+      "Name: Bulbasaur, Weight: 15.2, Price: 63.0\n",
+      "Name: Ivysaur, Weight: 28.7, Price: 87.0\n",
+      "Name: Venusaur, Weight: 220.5, Price: 105.0\n",
+      "Name: Charmander, Weight: 18.7, Price: 48.0\n",
+      "Name: Charmeleon, Weight: 41.9, Price: 165.0\n",
+      "Name: Charizard, Weight: 199.5, Price: 156.0\n",
+      "Name: Squirtle, Weight: 19.8, Price: 130.0\n",
+      "Name: Wartortle, Weight: 49.6, Price: 123.0\n",
+      "Name: Blastoise, Weight: 188.5, Price: 76.0\n",
+      "Name: Caterpie, Weight: 6.4, Price: 73.0\n",
+      "Name: Metapod, Weight: 21.8, Price: 148.0\n",
+      "Name: Butterfree, Weight: 70.5, Price: 162.0\n",
+      "Name: Weedle, Weight: 7.1, Price: 25.0\n",
+      "Name: Kakuna, Weight: 22.0, Price: 148.0\n",
+      "Name: Beedrill, Weight: 65.0, Price: 168.0\n",
+      "Name: Pidgey, Weight: 4.0, Price: 159.0\n"
      ]
     }
    ],
@@ -86,10 +86,10 @@
     "    poke_name = poke_soup.select_one(\"h1.product_title\").text\n",
     "\n",
     "    # Find the weight of the pokemon\n",
-    "    poke_weight = poke_soup.select_one(\"td.product_weight\").text.replace(\" kg\", \"\")\n",
+    "    poke_weight = float(poke_soup.select_one(\"td.product_weight\").text.replace(\" kg\", \"\"))\n",
     "\n",
     "    # Find the price of the pokemon\n",
-    "    poke_price = poke_soup.select(\"span.woocommerce-Price-amount\")[-1].text.replace(\"£\", \"\")\n",
+    "    poke_price = float(poke_soup.select(\"span.woocommerce-Price-amount\")[-1].text.replace(\"£\", \"\"))\n",
     "\n",
     "    print(f\"Name: {poke_name}, Weight: {poke_weight}, Price: {poke_price}\")"
    ]
